os-16.txt
\#include <stdio.h>
    struct clientData {                              
    unsigned int acctNum; // account number
    char lastName[ 15 ]; // account last name    
    char firstName[ 10 ]; // account first name   
    double balance; // account balance   
    }; // end structure clientData                   
 
    int main( void )  { 
    FILE *cfPtr; // credit.dat file pointer
    
    // create clientData with default information
    struct clientData client = { 0, "", "", 0.0 };
    
    // fopen opens the file; exits if file cannot be opened
    if ( ( cfPtr = fopen( "credit.dat", "rb+" ) ) == NULL ) {
      puts( "File could not be opened." );
    } // end if
    else { 
    
    // require user to specify account number
      printf( "%s", "Enter account number"
         " ( 1 to 100, 0 to end input )\n? " );
      scanf( "%d", &client.acctNum );
    
    // user enters information, which is copied into file
    while ( client.acctNum != 0 ) { 
    
    // user enters last name, first name and balance
    printf( "%s", "Enter lastname, firstname, balance\n? " );
    
    // set record lastName, firstName and balance value
    fscanf( stdin, "%14s%9s%lf", client.lastName, 
              client.firstName, &client.balance );
    // seek position in file to user-specified record   
      fseek( cfPtr, ( client.acctNum - 1 ) *              
            sizeof( struct clientData ), SEEK_SET );         
    
    // write user-specified information in file              
      fwrite( &client, sizeof( struct clientData ), 1, cfPtr );
    
    // enable user to input another account number
      printf( "%s", "Enter account number\n? " );
      scanf( "%d", &client.acctNum );
      } // end while
      fclose( cfPtr ); // fclose closes the file
      } // end else
    } // end main

 OUTPUT :

1 | \#include <stdio.h>
      | ^
/tmp/9h4jycxBRF.c:1:2: error: stray '#' in program
    1 | \#include <stdio.h>
      |  ^
/tmp/9h4jycxBRF.c:1:11: error: expected '=', ',', ';', 'asm' or '__attribute__' before '<' token
    1 | \#include <stdio.h>
      |           ^
/tmp/9h4jycxBRF.c: In function 'main':
/tmp/9h4jycxBRF.c:10:5: error: unknown type name 'FILE'
   10 |     FILE *cfPtr; // credit.dat file pointer
      |     ^~~~
/tmp/9h4jycxBRF.c:1:1: note: 'FILE' is defined in header '<stdio.h>'; did you forget to '#include <stdio.h>'?
  +++ |+#include <stdio.h>
    1 | \#include <stdio.h>
/tmp/9h4jycxBRF.c:13:12: error: variable 'client' has initializer but incomplete type
   13 |     struct clientData client = { 0, "", "", 0.0 };
      |            ^~~~~~~~~~
/tmp/9h4jycxBRF.c:13:34: warning: excess elements in struct initializer
   13 |     struct clientData client = { 0, "", "", 0.0 };
      |                                  ^
/tmp/9h4jycxBRF.c:13:34: note: (near initialization for 'client')
/tmp/9h4jycxBRF.c:13:37: warning: excess elements in struct initializer
   13 |     struct clientData client = { 0, "", "", 0.0 };
      |                                     ^~
/tmp/9h4jycxBRF.c:13:37: note: (near initialization for 'client')
/tmp/9h4jycxBRF.c:13:41: warning: excess elements in struct initializer
   13 |     struct clientData client = { 0, "", "", 0.0 };
      |                                         ^~
/tmp/9h4jycxBRF.c:13:41: note: (near initialization for 'client')
/tmp/9h4jycxBRF.c:13:45: warning: excess elements in struct initializer
   13 |     struct clientData client = { 0, "", "", 0.0 };
      |                                             ^~~
/tmp/9h4jycxBRF.c:13:45: note: (near initialization for 'client')
/tmp/9h4jycxBRF.c:13:23: error: storage size of 'client' isn't known
   13 |     struct clientData client = { 0, "", "", 0.0 };
      |                       ^~~~~~
/tmp/9h4jycxBRF.c:16:20: warning: implicit declaration of function 'fopen' [-Wimplicit-function-declaration]
   16 |     if ( ( cfPtr = fopen( "credit.dat", "rb+" ) ) == NULL ) {
      |                    ^~~~~
/tmp/9h4jycxBRF.c:16:20: note: 'fopen' is defined in header '<stdio.h>'; did you forget to '#include <stdio.h>'?
/tmp/9h4jycxBRF.c:16:18: warning: assignment to 'int *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
   16 |     if ( ( cfPtr = fopen( "credit.dat", "rb+" ) ) == NULL ) {
      |                  ^
/tmp/9h4jycxBRF.c:16:54: error: 'NULL' undeclared (first use in this function)
   16 |     if ( ( cfPtr = fopen( "credit.dat", "rb+" ) ) == NULL ) {
      |                                                      ^~~~
/tmp/9h4jycxBRF.c:1:1: note: 'NULL' is defined in header '<stddef.h>'; did you forget to '#include <stddef.h>'?
  +++ |+#include <stddef.h>
    1 | \#include <stdio.h>
/tmp/9h4jycxBRF.c:16:54: note: each undeclared identifier is reported only once for each function it appears in
   16 |     if ( ( cfPtr = fopen( "credit.dat", "rb+" ) ) == NULL ) {
      |                                                      ^~~~
/tmp/9h4jycxBRF.c:17:7: warning: implicit declaration of function 'puts' [-Wimplicit-function-declaration]
   17 |       puts( "File could not be opened." );
      |       ^~~~
/tmp/9h4jycxBRF.c:17:7: note: include '<stdio.h>' or provide a declaration of 'puts'
/tmp/9h4jycxBRF.c:22:7: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   22 |       printf( "%s", "Enter account number"
      |       ^~~~~~
/tmp/9h4jycxBRF.c:22:7: note: include '<stdio.h>' or provide a declaration of 'printf'
/tmp/9h4jycxBRF.c:22:7: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
/tmp/9h4jycxBRF.c:22:7: note: include '<stdio.h>' or provide a declaration of 'printf'
/tmp/9h4jycxBRF.c:24:7: warning: implicit declaration of function 'scanf' [-Wimplicit-function-declaration]
   24 |       scanf( "%d", &client.acctNum );
      |       ^~~~~
/tmp/9h4jycxBRF.c:24:7: note: include '<stdio.h>' or provide a declaration of 'scanf'
/tmp/9h4jycxBRF.c:24:7: warning: incompatible implicit declaration of built-in function 'scanf' [-Wbuiltin-declaration-mismatch]
/tmp/9h4jycxBRF.c:24:7: note: include '<stdio.h>' or provide a declaration of 'scanf'
/tmp/9h4jycxBRF.c:33:5: warning: implicit declaration of function 'fscanf' [-Wimplicit-function-declaration]
   33 |     fscanf( stdin, "%14s%9s%lf", client.lastName,
      |     ^~~~~~
/tmp/9h4jycxBRF.c:33:5: note: include '<stdio.h>' or provide a declaration of 'fscanf'
/tmp/9h4jycxBRF.c:33:5: warning: incompatible implicit declaration of built-in function 'fscanf' [-Wbuiltin-declaration-mismatch]
/tmp/9h4jycxBRF.c:33:5: note: include '<stdio.h>' or provide a declaration of 'fscanf'
/tmp/9h4jycxBRF.c:33:13: error: 'stdin' undeclared (first use in this function)
   33 |     fscanf( stdin, "%14s%9s%lf", client.lastName,
      |             ^~~~~
/tmp/9h4jycxBRF.c:33:13: note: 'stdin' is defined in header '<stdio.h>'; did you forget to '#include <stdio.h>'?
/tmp/9h4jycxBRF.c:36:7: warning: implicit declaration of function 'fseek' [-Wimplicit-function-declaration]
   36 |       fseek( cfPtr, ( client.acctNum - 1 ) *
      |       ^~~~~
/tmp/9h4jycxBRF.c:37:21: error: invalid application of 'sizeof' to incomplete type 'struct clientData'
   37 |             sizeof( struct clientData ), SEEK_SET );
      |                     ^~~~~~
/tmp/9h4jycxBRF.c:37:42: error: 'SEEK_SET' undeclared (first use in this function)
   37 |             sizeof( struct clientData ), SEEK_SET );
      |                                          ^~~~~~~~
/tmp/9h4jycxBRF.c:40:7: warning: implicit declaration of function 'fwrite' [-Wimplicit-function-declaration]
   40 |       fwrite( &client, sizeof( struct clientData ), 1, cfPtr );
      |       ^~~~~~
/tmp/9h4jycxBRF.c:40:7: note: include '<stdio.h>' or provide a declaration of 'fwrite'
/tmp/9h4jycxBRF.c:40:7: warning: incompatible implicit declaration of built-in function 'fwrite' [-Wbuiltin-declaration-mismatch]
/tmp/9h4jycxBRF.c:40:7: note: include '<stdio.h>' or provide a declaration of 'fwrite'
/tmp/9h4jycxBRF.c:40:32: error: invalid application of 'sizeof' to incomplete type 'struct clientData'
   40 |       fwrite( &client, sizeof( struct clientData ), 1, cfPtr );
      |                                ^~~~~~
/tmp/9h4jycxBRF.c:46:7: warning: implicit declaration of function 'fclose' [-Wimplicit-function-declaration]
   46 |       fclose( cfPtr ); // fclose closes the file
      |       